<resources>
    <string name="app_name">uhf_a</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Harry</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Inventory - Đọc tem</string>
    <string name="menu_slideshow">Log - Lịch sử đọc</string>
    <string name="menu_settings">Settings - Cài đặt</string>

    <string name="start">Start/Đọc</string>
    <string name="stop">Stop/Tạm dừng</string>
    <string name="reset">Reset/Đặt lại</string>
    <string name="upload">Upload/Tải lên</string>

    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>