<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTags"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FAFAFA"
        android:paddingVertical="4dp"
        android:scrollbars="vertical" />


    <!-- Bottom Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:padding="4dp"
        android:backgroundTint="@color/black"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvTotalCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="Tổng số: 0"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#2E7D32"
            android:textColor="#FFFFFF"
            android:text="@string/start" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="#FFC107"
            android:textColor="#000000"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#0288D1"
            android:textColor="#FFFFFF"
            android:text="@string/upload" />
    </LinearLayout>

</LinearLayout>
